# dlite-cuds

./: .pre-commit-config.yaml  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.github/utils/: release_tag_msg.txt  single_dependency_pr_body.txt
.github/workflows/: cd_dependencies.yml  cd_release.yml  ci_automerge_dependabot.yml  ci_cd_updated_main.yml  ci_dependabot.yml  ci_tests.yml
dlite_cuds/: __init__.py  cuds2dlite.py  dlite2cuds.py
dlite_cuds/strategies/: collection_to_cuds_function.py  cuds_to_collection_function.py  cuds_to_entity_function.py  parse.py  parse_collection.py  parse_instance.py  save_graph.py  save_instance.py
dlite_cuds/utils/: cuds2dlite.py  dlite2cuds.py  dlite_utils.py  rdf.py  utils.py  utils_path.py
docs/: all_strategies.md  cuds2dlite_explained.md  dlite2cuds_explained.md  index.md
docs/api_reference/: cuds2dlite.md  dlite2cuds.md
docs/api_reference/strategies/: collection_to_cuds_function.md  cuds_to_collection_function.md  cuds_to_entity_function.md  download.md  filter.md  function.md  mapping.md  parse.md  parse_collection.md  parse_instance.md  resource.md  save_graph.md  save_instance.md  transformation.md
docs/api_reference/utils/: cuds2dlite.md  cuds2dlite_old.md  dlite2cuds.md  dlite_utils.md  rdf.md  utils.md  utils_path.md
docs/figs/: Untitled Diagram.drawio
example/: TypeTwo.json  convert_ontology_to_ttl.py  ex.ttl  example_ABox.ttl  generate_example_ABox.py  generate_example_a_box.py  instances.json  mkcoll.py  ontology.example.yml
examples/: ss5_cuds2dlite_create_entitiy.py
examples/inputfiles_cuds2dlite/: ss5_input.ttl
examples/ontologies/: mods.ttl  mods.ttl.yml
tests/: Abox_example_sim.ttl  conftest.py  dlite2cuds.py  dlite2cuds_first_example.py  dlite2cuds_molecule_ex.py  dlite2cuds_symphony.py  play_w_symphony.py  play_w_symphony_2.py  simphony_testing.py  simphony_testing2.py  test_collection.py  test_cuds2dlite.py  test_cuds2dlite_create_entity.py  test_cuds2dlite_create_entity_only_mappings.py  test_cuds2dlite_create_instance.py  test_cuds2dlite_general_example.py  test_dlite2cuds.py  test_dlite2cuds_add_relations.py  test_dlite2cuds_create_cuds.py  test_rdf.py
tests/inputfiles_cuds2dlite/: .cuds.ttl.swp  Abox_example_sim.ttl  cuds.ttl  generate_abox_osp.py  generate_abox_simphony.py
tests/inputfiles_dlite2cuds/: README.md  generate_mapping_collection.py  generate_mapping_collection_example.py  generate_molecule_data.py  generate_substance_data.py  mapping_collection.json  mappings_example.json  molecule_data.json  substance_data.json
tests/inputfiles_dlite2cuds/entities/: Molecule.json  TypeOne.json  TypeOne_v2.json  TypeThree.json
tests/inputfiles_dlite2cuds/instances/: instances_and_relations.json  typeone_instance.json  typethree_instance.json  typetwo_instance.json
tests/inputfiles_dlite2cuds/mappings/: generate_mapping_collection_example.py  mappings_example.json
tests/ontologies/: README.md  chemistry.ttl.yml  example.ttl.yml  example_sim.ttl  example_sim.ttl.yml  install_ontologies.sh  mapsTo.ttl.yml
tests/strategies/: test_collection_to_cuds_function.py  test_cuds_to_collection_function.py  test_cuds_to_entity_function.py  test_download.py  test_filter.py  test_function.py  test_mapping.py  test_parse.py  test_parse_collection.py  test_parse_instance.py  test_resource.py  test_save_graph.py  test_save_instance.py  test_transformation.py
tests/testfiles/: cuds.ttl  generatedentity.json  onto.ttl
tests/testfiles/.ipynb_checkpoints/: app4-datum-0.1-checkpoint.json  datum_01-checkpoint.json  datum_02-checkpoint.json  (+3 more)
