### Installation and source distribution configuration
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dlite-cuds"
authors = [
    {name = "Team4.0", email = "team4.0@sintef.no"},
]
description = "OTEAPI Plugin."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    # "Framework :: OTEAPI",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
keywords = ["OTE", "OTEAPI"]
requires-python = "~=3.9"
dynamic = ["version"]

dependencies = [
    "Dlite-Python",
    "simphony-osp ~=4.0",
    "oteapi-core",
]

[project.optional-dependencies]
doc = [
    "invoke ~=2.0",
    "mike ~=1.1",
    "mkdocs ~=1.4",
    "mkdocs-awesome-pages-plugin ~=2.8",
    "mkdocs-material ~=9.0",
    "mkdocstrings[python] ~=0.20.0",
]
dev = [
    "invoke ~=2.0",
    "mike ~=1.1",
    "mkdocs ~=1.4",
    "mkdocs-awesome-pages-plugin ~=2.8",
    "mkdocs-material ~=9.0",
    "mkdocstrings[python] ~=0.20.0",
    "pre-commit >=2.21.0, <3; python_version <'3.8'",
    "pre-commit ~=3.0; python_version >='3.8'",
    "pylint ~=2.15",
    "pytest ~=7.2",
    "pytest-cov ~=4.0",
    "tomlkit ~=0.11.6",
]

[project.urls]
Home = "https://github.com/EMMC-ASBL/dlite-cuds"
Documentation = "https://team4.0.github.io/dlite-cuds"
Source = "https://github.com/EMMC-ASBL/dlite-cuds"
"Issue Tracker" = "https://github.com/EMMC-ASBL/dlite-cuds/issues"
Changelog = "https://github.com/EMMC-ASBL/dlite-cuds/blob/main/CHANGELOG.md"
Package = "https://pypi.org/project/dlite-cuds"

#[project.entry-points.oteapi.download]
#[project.entry-points.oteapi.filter]
[project.entry-points."oteapi.function"]
#"dlite_cuds.function/CUDS2Entity" = "dlite_cuds.strategies.cuds_to_entity_function:EntityFunctionStrategy"
#"dlite_cuds.function/CUDS2Collection" = "dlite_cuds.strategies.cuds_to_collection_function:CollectionFunctionStrategy"
#"dlite_cuds.function/Collection2CUDS" = "dlite_cuds.strategies.collection_to_cuds_function:CUDSFunctionStrategy"
#"dlite_cuds.function/SaveInstance" = "dlite_cuds.strategies.save_instance:InstanceSaveStrategy"
#"dlite_cuds.function/SaveGraph" = "dlite_cuds.strategies.save_graph:GraphSaveStrategy"
[project.entry-points."oteapi.mapping"]
[project.entry-points."oteapi.parse"]
#"dlite_cuds.application/CUDS" = "dlite_cuds.strategies.parse:CUDSParseStrategy"
#"dlite_cuds.application/Collection" = "dlite_cuds.strategies.parse_collection:CollectionParseStrategy"
#"dlite_cuds.application/Instance" = "dlite_cuds.strategies.parse_instance:InstanceParseStrategy"
[project.entry-points."oteapi.resource"]
[project.entry-points."oteapi.transformation"]
[tool.flit.module]
name = "dlite_cuds"

### Dev tools configuration
[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true

[tool.pylint.messages_control]
max-line-length = 90
disable = [
    "duplicate-code",
    "no-name-in-module",
    "too-few-public-methods",
    "no-self-argument"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rs --cov=dlite_cuds --cov-report=term --durations=10"
filterwarnings = [
    "ignore:.*imp module.*:DeprecationWarning",
    "ignore:.*_yaml extension module.*:DeprecationWarning"
]
